component Events 정리

--- a/src/html/accordion.html
+++ b/src/html/accordion.html
@@ -33,7 +33,7 @@
 
                     <ul id="accordion1" class="accordion" data-accr>
                         <li id="accordion1_1" class="accordion-item on" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button plus" data-accr-trigger><span class="blind">접기</span></button>
                             </div>
@@ -44,7 +44,7 @@
                             </div>
                         </li>
                         <li id="accordion1_2" class="accordion-item" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                             </div>
@@ -57,7 +57,7 @@
                             </div>
                         </li>
                         <li id="accordion1_3" class="accordion-item" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                             </div>
@@ -69,7 +69,7 @@
                             </div>
                         </li>
                         <li id="accordion1_4" class="accordion-item" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                             </div>
@@ -94,7 +94,7 @@
                     <button id="show2" type="button" class="guide-btn">특정 아코디언 열기</button>
                     <ul id="accordion2" class="accordion" data-accr="only">
                         <li id="accordion2_1" class="accordion-item on" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button plus" data-accr-trigger><span class="blind">접기</span></button>
                             </div>
@@ -103,7 +103,7 @@
                                     내용
                                     <ul class="accordion" data-accr="only">
                                         <li class="accordion-item on" data-accr-item>
-                                            <div class="accordion-title">
+                                            <div class="accordion-header" data-accr-header>
                                                 아코디언 속 아코디언
                                                 <button type="button" class="accordion-button plus" data-accr-trigger><span class="blind">접기</span></button>
                                             </div>
@@ -114,7 +114,7 @@
                                             </div>
                                         </li>
                                         <li class="accordion-item" data-accr-item>
-                                            <div class="accordion-title">
+                                            <div class="accordion-header" data-accr-header>
                                                 아코디언 속 아코디언
                                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                                             </div>
@@ -127,7 +127,7 @@
                                             </div>
                                         </li>
                                         <li class="accordion-item" data-accr-item>
-                                            <div class="accordion-title">
+                                            <div class="accordion-header" data-accr-header>
                                                 아코디언 속 아코디언
                                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                                             </div>
@@ -139,7 +139,7 @@
                                             </div>
                                         </li>
                                         <li class="accordion-item" data-accr-item>
-                                            <div class="accordion-title">
+                                            <div class="accordion-header" data-accr-header>
                                                 아코디언 속 아코디언
                                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                                             </div>
@@ -154,7 +154,7 @@
                             </div>
                         </li>
                         <li id="accordion2_2" class="accordion-item" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                             </div>
@@ -167,7 +167,7 @@
                             </div>
                         </li>
                         <li id="accordion2_3" class="accordion-item" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                             </div>
@@ -179,7 +179,7 @@
                             </div>
                         </li>
                         <li id="accordion2_4" class="accordion-item" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                             </div>
@@ -202,7 +202,7 @@
 
                     <ul class="accordion" data-accr="only" data-animation="false">
                         <li class="accordion-item on" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button plus" data-accr-trigger><span class="blind">접기</span></button>
                             </div>
@@ -213,7 +213,7 @@
                             </div>
                         </li>
                         <li class="accordion-item" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                             </div>
@@ -226,7 +226,7 @@
                             </div>
                         </li>
                         <li class="accordion-item" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                             </div>
@@ -238,7 +238,7 @@
                             </div>
                         </li>
                         <li class="accordion-item" data-accr-item>
-                            <div class="accordion-title">
+                            <div class="accordion-header" data-accr-header>
                                 타이틀
                                 <button type="button" class="accordion-button" data-accr-trigger><span class="blind">펼치기</span></button>
                             </div>
@@ -257,22 +257,27 @@
                     </header>
 
                     <p class="guide-text">시점에 따른 이벤트</p>
-                    <pre><code class="language-js">document.querySelectorAll('[data-accr-item]').forEach(function (el) {
+                    <pre><code class="language-js">document.querySelectorAll('[data-accr]').forEach(function (el) {
+    /* e.item: [data-accr-item]
+     * e.header: [data-accr-header]
+     * e.trigger: [data-accr-trigger]
+     * e.target: [data-accr-target]
+     */
     // 열릴 때
-    el.addEventListener('modal.showing', function () {
-        console.log(this, 'showing');
+    el.addEventListener('accr.showing', function (e) {
+        console.log(e.item, e.header, e.trigger, e.target, 'showing');
     })
     // 열린 후
-    el.addEventListener('modal.shown', function () {
-        console.log(this, 'shown');
+    el.addEventListener('accr.shown', function (e) {
+        console.log(e.item, e.header, e.trigger, e.target, 'shown');
     })
     // 닫힐 때
-    el.addEventListener('modal.hiding', function () {
-        console.log(this, 'hiding');
+    el.addEventListener('accr.hiding', function (e) {
+        console.log(e.item, e.header, e.trigger, e.target, 'hiding');
     })
     // 닫힌 후
-    el.addEventListener('modal.hidden', function () {
-        console.log(this, 'hidden');
+    el.addEventListener('accr.hidden', function (e) {
+        console.log(e.item, e.header, e.trigger, e.target, 'hidden');
     })
 })</code></pre>
                 </section>
@@ -310,18 +315,18 @@ accr.hide(document.querySelector('#accordion1_3')); // object</code></pre>
     <script src="../resources/js/vendor/prism.js"></script>
     <script src="../resources/js/ui.js"></script>
     <script>
-        document.querySelectorAll('[data-accr-item]').forEach(function (el) {
-            el.addEventListener('accr.showing', function () {
-                console.log(this, 'showing');
+        document.querySelectorAll('[data-accr]').forEach(function (el) {
+            el.addEventListener('accr.showing', function (e) {
+                console.log(e.item, e.header, e.trigger, e.target, 'showing');
             })
-            el.addEventListener('accr.shown', function () {
-                console.log(this, 'shown');
+            el.addEventListener('accr.shown', function (e) {
+                console.log(e.item, e.header, e.trigger, e.target, 'shown');
             })
-            el.addEventListener('accr.hiding', function () {
-                console.log(this, 'hiding');
+            el.addEventListener('accr.hiding', function (e) {
+                console.log(e.item, e.header, e.trigger, e.target, 'hiding');
             })
-            el.addEventListener('accr.hidden', function () {
-                console.log(this, 'hidden');
+            el.addEventListener('accr.hidden', function (e) {
+                console.log(e.item, e.header, e.trigger, e.target, 'hidden');
             })
         })
 
