--- a/src/html/modal.html
+++ b/src/html/modal.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="stylesheet" href="../resources/css/common.min.css">
+    @@include('./src/_includes/ga.md')
     <title>Modal</title>
 </head>
 
