--- a/src/html/tooltip.html
+++ b/src/html/tooltip.html
@@ -127,7 +127,6 @@
         console.log(e.target, 'hidden');
     })
 })</code></pre>
-
                 </section>
 
                 <section class="guide-section">
@@ -137,8 +136,7 @@
 
                     <p class="guide-text">Component 호출(feat. 비동기)</p>
                     <pre><code class="language-js">const tooltipEl = document.querySelector('#tooltip1');
-const tooltip = new SKY.Tooltip(tooltipEl);
-</code></pre>
+const tooltip = new SKY.Tooltip(tooltipEl);</code></pre>
 
                     <p class="guide-text">show 호출</p>
                     <pre><code class="language-js">tooltip.show();</code></pre>
