--- a/src/html/checkbox.html
+++ b/src/html/checkbox.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="stylesheet" href="../resources/css/common.min.css">
-    @@include('./src/_includes/ga.md')
-    <title>Checkbox</title>
-</head>
+@@include('./src/_includes/head.md', {title: 'SKY | Checkbox'})
 
 <body>
     <div class="ly-wrap">
