--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="stylesheet" href="../resources/css/common.min.css">
-    @@include('./src/_includes/ga.md')
-    <title>Guide_es6</title>
-</head>
+@@include('./src/_includes/head.md', {title: 'SKY'})
 
 <body>
     <div class="ly-wrap">
@@ -23,6 +16,12 @@
                     <li class="txt-mark dot">프로젝트 구축 시에 바로 갖다쓰기에 용이하도록 최소 스타일로 작업한 산출물입니다.</li>
                     <li class="txt-mark dot">파일 구조 및 환경에 대해서는 <a href="https://sonky740.github.io/Guide_es6/" target="_blank" class="link-text">여기</a>에서 볼 수 있습니다.</li>
                     <li class="txt-mark dot">예전 ES5기준으로 한 가이드 사이트는 <a href="https://sonky740.github.io/Guide/dist/html/" target="_blank" class="link-text">여기</a>에서 볼 수 있습니다.</li>
+                </ul>
+
+                <hr class="guide-hr">
+                <h3 class="content-title">Component List</h3>
+                <ul class="comp-list">
+                    @@include('./src/_includes/navList.md')
                 </ul>
             </div>
         </div>
