--- a/src/html/sample.html
+++ b/src/html/sample.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="stylesheet" href="../resources/css/common.min.css">
-    @@include('./src/_includes/ga.md')
-    <title>Sample</title>
-</head>
+@@include('./src/_includes/head.md', {title: 'SKY | Sample'})
 
 <body>
     <div class="ly-wrap">
@@ -34,7 +27,7 @@
     <script src="../resources/js/vendor/prism.js"></script>
     <script src="../resources/js/ui.js"></script>
     <script>
-        
+
     </script>
 </body>
 
