--- a/src/html/tooltip.html
+++ b/src/html/tooltip.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="stylesheet" href="../resources/css/common.min.css">
-    @@include('./src/_includes/ga.md')
-    <title>Tooltip</title>
-</head>
+@@include('./src/_includes/head.md', {title: 'SKY | Tooltip'})
 
 <body>
     <div class="ly-wrap">
@@ -154,7 +147,7 @@ const tooltip = new SKY.Tooltip(tooltipEl);</code></pre>
         const tooltipEl = document.querySelector('#tooltip1');
         const tooltip = new SKY.Tooltip(tooltipEl);
 
-        document.querySelectorAll('[data-tooltip]').forEach(function(el) {
+        document.querySelectorAll('[data-tooltip]').forEach(function (el) {
             el.addEventListener('tooltip.showing', function (e) {
                 console.log(e.target, 'showing');
             })
