toast guide update

--- a/src/html/toast.html
+++ b/src/html/toast.html
@@ -56,8 +56,8 @@ document.addEventListener('toast.hidden', function() {
 // 첫번쨰 인자: string: html,
 // 두번째 인자: number: 떠있는 시간 (default: 2초),
 // 세번째 인자: string: class명 (.toast-content에 붙음)
-const message = '스크립트 <span style="color: red;">생성</span>';
-const messageBtn = '버튼 클릭 <span style="color: red;">생성</span>';
+const message = '스크립트 &lt;span style="color: red;"&gt;생성&lt;/span&gt;';
+const messageBtn = '버튼 클릭 &lt;span style="color: red;"&gt;생성&lt;/span&gt;';
 new SKY.Toast().show(message);</code></pre>
                 </section>
             </div>
