counter guide update

--- a/src/html/counter.html
+++ b/src/html/counter.html
@@ -22,6 +22,13 @@
 
                     <p data-counter="4014" data-init-number="200" data-duration="2000" data-comma="true">0</p>
                     <p data-counter="4014" data-init-number="20000" data-duration="2000">0</p>
+
+                    <pre><code class="language-html">&lt;!-- data-counter: 도착 수치 --&gt;
+&lt;!-- data-init-number: 시작 수치 --&gt;
+&lt;!-- data-duration: 걸리는 시간 --&gt;
+&lt;!-- data-comma: 세자릿수 comma 표기 여부 --&gt;
+&lt;p data-counter="4014" data-init-number="200" data-duration="2000" data-comma="true"&gt;0&lt;/p&gt;
+&lt;p data-counter="4014" data-init-number="20000" data-duration="2000"&gt;0&lt;/p&gt;</code></pre>
                 </section>
 
                 <section class="guide-section">
