--- a/src/html/wordle.html
+++ b/src/html/wordle.html
@@ -19,8 +19,8 @@
                         <h3 class="guide-section-title">Wordle</h3>
                     </header>
 
-                    <p class="guide-text">5글자 영어, 총 24단어 중에 랜덤하게 나옴.</p>
-                    <p class="guide-text">초록색: 위치까지 정답,<br>노란색: 자리는 맞지 않지만 정답에 포함됨,<br>회색: 답에 없는 글자</p>
+                    <p class="guide-text">5글자 영어, 총 100단어 중에 랜덤하게 나옴.</p>
+                    <p class="guide-text">초록색: 정답 단어의 알파벳 종류와 위치가 모두 일치,<br>노란색: 정답 단어에 들어가는 알파벳이지만 위치가 불일치,<br>회색: 정답 단어에 없는 알파벳</p>
 
                     <form class="wordle-wrap" data-wordle></form>
                 </section>
